// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly where background is set Black 1`] = `
<button
  className="sc-bdVaJa jlfIJs"
/>
`;

exports[`renders correctly where background is set Danger 1`] = `
<button
  className="sc-bdVaJa pckHw"
/>
`;

exports[`renders correctly where background is set Success 1`] = `
<button
  className="sc-bdVaJa jNFceP"
/>
`;

exports[`renders correctly where background is set Warning 1`] = `
<button
  className="sc-bdVaJa iUWwcU"
/>
`;

exports[`renders correctly where background is set primary 1`] = `
<button
  className="sc-bdVaJa hsUqXD"
/>
`;

exports[`renders correctly where btn size is set to Large 1`] = `
<button
  className="sc-bdVaJa glIWXK"
/>
`;

exports[`renders correctly where btn size is set to Tiny 1`] = `
<button
  className="sc-bdVaJa bBWKPT"
/>
`;

exports[`renders correctly where btn size is set to small 1`] = `
<button
  className="sc-bdVaJa fHBdVf"
/>
`;

exports[`renders correctly where inverse is set  1`] = `
<button
  className="sc-bdVaJa hrjGMq"
/>
`;

exports[`renders correctly where transparency is set 1`] = `
<button
  className="sc-bdVaJa dgmOJf"
/>
`;

exports[`renders the default correctly when no props are passed 1`] = `
<button
  className="sc-bdVaJa lfJEGU"
/>
`;
